# KETI-Storage-Controller-Module

./: README.md  poc_list.txt
CSD-Identifier/: .gitignore  0.build-image.sh  1.build.sh  2.send.sh  3.log.sh  Dockerfile  README.md  build.sh  csd-identifier.yaml  csd-identifier_backup.sh  main.cc
CSD-Identifier/backup/: 2.create.sh  3.delete.sh  4.debug.sh
CSD-Metric-Interface/: 1.build.sh  4.debug.sh  go.mod  go.sum
CSD-Metric-Interface/deploy/: metric-collector-deploy.yaml  metric-collector-sa-cr.yaml  metric-collector-svc.yaml  metric-interface-deploy.yaml  metric-interface-sa-cr.yaml  metric-interface-svc.yaml
CSD-Metric-Interface/src/: protobuild.sh
CSD-Metric-Interface/src/config/: config.pb.go  config.proto  config_grpc.pb.go
CSD-Metric-Interface/src/main/: main.go
LBA2PBA-Manager/: 1.build.sh  1.create.sh  2.create.sh  2.delete.sh  3.log.sh  4.debug.sh  CMakeLists.txt  Dockerfile  LBA2PBAManager.cc  LBA2PBAManager.h  README.md  deploy-lba2pba.yaml  grpc_header.txt  lba2pba-manager.yaml
LBA2PBA-Manager/backup/: 3.delete.sh
LBA2PBA-Manager/cmake/: lba_pba.txt
LBA2PBA-Manager/cmake/proto/: lba2pba.proto
LBA2PBA-Manager/logs/: Query14.txt  Query6.txt
OpenCSD-Storage-Manager/: 1.build.sh  4.debug.sh  go.mod
OpenCSD-Storage-Manager/deploy/: storage-manager-deploy.yaml  storage-manager-svc.yaml
OpenCSD-Storage-Manager/src/handler/: handler.go
OpenCSD-Storage-Manager/src/main/: main.go
OpenCSD-Volume-Manager/: 1.build.sh  4.debug.sh  go.mod
OpenCSD-Volume-Manager/deploy/: volume-manager-deploy.yaml  volume-manager-svc.yaml
OpenCSD-Volume-Manager/src/handler/: handler.go
OpenCSD-Volume-Manager/src/main/: main.go
Storage-API-Server/: 1.build.sh  go.mod  go.sum
Storage-API-Server/backup/: 2.create.sh  4.debug.sh  apiserver-deploy.yaml  apiserver-svc.yaml
Storage-API-Server/client_test/: client.go
Storage-API-Server/src/handler/: handler.go
Storage-API-Server/src/main/: main.go
Storage-API-Server/src/struct/: struct.go
Storage-Manager/: CMakeLists.txt  db_file_monitoring.cc  db_file_monitoring.h  lba2pba_manager.cc  lba2pba_manager.h  main.cc
Storage-Manager/LBA2PBA-Manager/: CMakeLists.txt  LBA2PBAManager.h
Storage-Manager/LBA2PBA-Manager/cmake/: filefrag.txt
Storage-Manager/LBA2PBA-Manager/cmake/proto/: lba2pba.proto
Storage-Manager/cmake/proto/: storage-manager.proto
Storage-Manager/logs/: Query5.txt  sst_csd_map
Storage-Metric-Collector/: 1.build.sh  2.copy.sh  go.mod  go.sum
Storage-Metric-Collector/src/controller/: controller.go  types.go
Storage-Metric-Collector/src/main/: main.go
WAL-Manager/WAL-Manager_keti/: CMakeLists.txt  WalServer.cc  WalServer.h  WalServerMain.cc
WAL-Manager/WAL-Manager_opensysnet/: grpc_client.py  wal_manager.proto  wal_manager.py  wal_manager_pb2.py  wal_manager_pb2_grpc.py
WAL-Manager/wal-cpp-client-test/protos/: wal_manager.proto
WAL-Manager/wal-cpp-client-test/wal_manager/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  wal_client.cc  wal_manager.grpc.pb.cc  wal_manager.grpc.pb.h  wal_manager.pb.cc  wal_manager.pb.h  wal_server.cc
WAL-Manager/wal-cpp-client-test/wal_manager/cmake_externalproject/: CMakeLists.txt
